# mail-relayer-rest/src/main/java/mx/conacyt/crip/mail/adapter/in/web/EmailResource.java
@@ -1,5 +1,7 @@
 package mx.conacyt.crip.mail.adapter.in.web;
 
+import java.net.URI;
+
 import org.simplejavamail.email.EmailBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -17,11 +19,29 @@ public class EmailResource implements EmailsApiDelegate {
     private SendMailUseCase sendMailUseCase;
 
     @Override
-    public ResponseEntity<Void> sendEmail(Email email) {
-        sendMailUseCase.sendMail(
-                new SendMailCommand(EmailBuilder.startingBlank().toMultiple(email.getTo()).from(email.getFrom())
-                        .withSubject(email.getSubject()).withPlainText(email.getPlainBody()).buildEmail()));
-        return ResponseEntity.ok().build();
+    public ResponseEntity<Void> sendEmail(Email email, Boolean async) {
+        if (!Boolean.TRUE.equals(async)) {
+            return sendEmail(email);
+        }
+        return sendEmailAsync(email);
     }
 
+    private ResponseEntity<Void> sendEmailAsync(Email email) {
+        String msgId = sendMailUseCase.sendMail(new SendMailCommand(map(email), Boolean.TRUE));
+        return ResponseEntity.accepted().location(toUri(msgId)).build();
+    }
+
+    public ResponseEntity<Void> sendEmail(Email email) {
+        String msgId = sendMailUseCase.sendMail(new SendMailCommand(map(email), Boolean.FALSE));
+        return ResponseEntity.created(toUri(msgId)).build();
+    }
+
+    private org.simplejavamail.api.email.Email map(Email email) {
+        return EmailBuilder.startingBlank().toMultiple(email.getTo()).from(email.getFrom())
+                .withSubject(email.getSubject()).withPlainText(email.getPlainBody()).buildEmail();
+    }
+
+    private URI toUri(String msgId) {
+        return URI.create(String.format("mid:%s", msgId.replace("<", "").replace(">", "")));
+    }
 }
